<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:orientation="vertical"
    tools:context=".SignUpScreen">

    <TextView
        android:id="@+id/textViewsignupappname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textViewsignupname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="16dp"
        android:text="@string/signupname"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextsignupname"
        android:layout_width="427dp"
        android:layout_height="59dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/signupnamehint"
        android:inputType="text"
        android:textColor="@color/material_dynamic_neutral10"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewsignupemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/signupemail"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextEmailAddresssignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/signupemailhint"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewsignuppassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/signupPassword"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextPasswordsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/signuppasswordhint"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewsignupconfirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/signupconfirmpassword"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextPasswordsignupconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/signupconfirmpasswordhint"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBoxsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="16dp"
        android:text="@string/termscondition"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonsignuppagesignup"
        android:layout_width="405dp"
        android:layout_height="64dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/blue"
        android:onClick="submit"
        android:text="@string/signupBTN"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewsignuphaveanacc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/signUptextalreadyAcc"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonsignupsignin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/btnSignin"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

</LinearLayout>