<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:background="@color/yellow">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.222"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="846dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="211dp"
            android:layout_height="176dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/signupname"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextprofilename"
            android:layout_width="421dp"
            android:layout_height="55dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="text"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextEmailAddressprofileemail"
            android:layout_width="415dp"
            android:layout_height="58dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <Spinner
            android:id="@+id/spinnerCurrency"
            android:layout_width="415dp"
            android:layout_height="42dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:entries="@array/currency_options" />


        <Button
            android:id="@+id/buttonsignout"
            android:layout_width="292dp"
            android:layout_height="62dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/blue"
            android:text="@string/signout"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttondeleteacc"
            android:layout_width="292dp"
            android:layout_height="63dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/blue"
            android:text="@string/deleteacc"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnExport"
            android:layout_width="299dp"
            android:layout_height="62dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:text="Export Backup"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnImport"
            android:layout_width="299dp"
            android:layout_height="58dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:text="Import Backup"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="460dp"
        android:layout_height="62dp"
        android:background="@color/yellow">

        <ImageView
            android:id="@+id/imageViewhome"
            android:layout_width="67dp"
            android:layout_height="52dp"
            android:layout_marginLeft="5dp"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/imageViewtransaction"
            android:layout_width="75dp"
            android:layout_height="58dp"
            android:layout_marginLeft="120dp"
            app:srcCompat="@drawable/transaction" />

        <ImageView
            android:id="@+id/imageViewbudget"
            android:layout_width="75dp"
            android:layout_height="53dp"
            android:layout_marginLeft="250dp"
            app:srcCompat="@drawable/budget" />

        <ImageView
            android:id="@+id/imageViewprofile"
            android:layout_width="75dp"
            android:layout_height="54dp"
            android:layout_marginLeft="350dp"
            app:srcCompat="@drawable/profile" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</LinearLayout>